# neuro-canvas

./: .cirrus.yml  .dockerignore  .env.example  Dockerfile  README.md  capacitor.config.ts  content.config.ts  docker-entrypoint.sh  eslint.config.mjs  nuxt.config.ts  package-lock.json  package.json  prisma.config.ts  uno.config.ts  vitest.config.ts
.github/workflows/: ci.yml  mobile-selfhosted.yml  mobile-verify.yml  release.yml  tauri-beta.yml  tauri-selfhosted.yml
android/: capacitor.settings.gradle  variables.gradle
android/app/: build.gradle  capacitor.build.gradle
app/: app.vue  error.vue
app/ai/: index.ts
app/components/: AppLoadingScreen.vue  AppSidebar.vue  DesktopAuthModal.vue  FileUploader.vue  MobileTabBar.vue  NcLogo.vue  OfflineIndicator.vue  PlatformIcon.vue  UpdateNotification.vue
app/composables/: useAI.ts  useAIAgent.ts  useAIMemory.ts  useAISettings.ts  useAnchors.ts  useAuthStore.ts  useAutoSave.ts  useBoxSelection.ts  useCameraIntelligence.ts  useCanvasCoordinates.ts  useCanvasInteraction.ts  useCanvasTheme.ts  useCollabSession.ts  useConfirmDialog.ts  useConnectionAnimation.ts  useConnectionTool.ts  useCredentialVault.ts  useDatabase.ts  useDesktopAuth.ts  useDeviceId.ts  useDragInteraction.ts  useEdgeAnimations.ts  useExport.ts  useForceGraph.ts  useGraphRenderer.ts  useGuestMode.ts  useInsightEngine.ts  useKeyboardAvoidance.ts  useLinkIndex.ts  useLocalLLM.ts  useMapRegions.ts  useMapRender.ts  useMapRenderer.ts  useMapYDocBridge.ts  useMarkdownSync.ts  useMobileAuth.ts  useNodeAnimations.ts  useNodeEditing.ts  useNodeHitTest.ts  useOutlineGhost.ts  (+23 more)
app/constants/: categories.ts
app/database/: migrations.ts  schema.sql  sqlite-driver.ts
app/layouts/: canvas.vue  default.vue
app/middleware/: auth.ts  guest.ts
app/pages/: dashboard.vue  download.vue  index.vue  install.vue  privacy.vue  settings.vue  signin.vue  terms.vue
app/plugins/: 00.tauri-auth-fix.client.ts  auth-baseurl.client.ts  auth-interceptor.client.ts  capacitor-keyboard.client.ts  capacitor-native.client.ts  capacitor-router.client.ts  platform-class.client.ts  tauri-router.client.ts  theme.client.ts
app/stores/: mapStore.ts  semanticStore.ts  userStore.ts
app/types/: ai-generation.ts  ai-settings.ts  canvas.ts  index.ts  semantic.ts  sidebar.ts  template.ts
app/utils/: QuadTree.ts  ai-prompts.ts  aiClient.ts  color.ts  crypto.ts  cursorColor.ts  (+8 more)
i18n/: i18n.config.ts
partykit/: partykit.json
plugins/capacitor-plugin-local-llm/android/src/main/cpp/: CMakeLists.txt  llama-jni.cpp
prisma/: schema.prisma  seed-templates.ts  seed.ts
scripts/: bump-version.mjs  mirror-beta-to-r2.sh  post-generate.cjs  register-self-hosted-runner.sh  tauri-dev.sh
src-tauri/: Cargo.toml  Entitlements.plist  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_initial.sql
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: ml.rs  mod.rs
src-tauri/src/ml/: embedding.rs  mod.rs  model_manager.rs  state.rs
stubs/: empty.ts
workers/: ai.worker.ts
(+549 files in other folders)
