[package]
name = "neurocanvas"
version = "1.0.0"
description = "AI-powered mind mapping application"
authors = ["Vanja Modrinjak"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77"

[lib]
name = "neurocanvas_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
tauri-plugin-os = "2"
tauri-plugin-http = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "2"
hostname = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# ML / ONNX Runtime
ort = { version = "=2.0.0-rc.11", features = ["download-binaries", "coreml"] }
tokenizers = "0.21"
ndarray = "0.16"

# HTTP download for full model
reqwest = { version = "0.12", features = ["stream"] }
futures-util = "0.3"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = 3
strip = false

[profile.dev]
incremental = true
